# Falcon-Bms-Configure-Editor

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Localization/: Comm.cfg.json  Graphic.cfg.json  HotasAndKey.cfg.json  MP.cfg.json  Other.cfg.json  VR.cfg.json
resource/: Comm.cfg.json  Graphic.cfg.json  HotasAndKey.cfg.json  MP.cfg.json  Other.cfg.json  VR.cfg.json
src/: cfgreader.cpp  cfgreader.h  mpitemmodel.cpp  mpitemmodel.h  usercfgreader.cpp  usercfgreader.h  userdefinejsonmanager.cpp  userdefinejsonmanager.h
